Project

General

Profile

Bug #9790

ceph auth get does not always show auid

Added by Loïc Dachary over 9 years ago. Updated over 9 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
cephx
Target version:
-
% Done:

100%

Source:
other
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The auid shows in plain format but not otherwise

root@g3:~# ceph --format json-pretty auth get client.sileht
exported keyring for client.sileht

[
    { "entity": "client.sileht",
      "key": "AQBZBihUqNxSIxAAIO0NDFHeZUb2j7QGRsDLNg==",
      "caps": { "mon": "allow profile simple-rados-client",
          "osd": "allow rwx pool=sileht-pool"}}]root@g3:~# 
root@g3:~# ceph auth get client.sileht
exported keyring for client.sileht
[client.sileht]
    key = AQBZBihUqNxSIxAAIO0NDFHeZUb2j7QGRsDLNg==
    auid = 100
    caps mon = "allow profile simple-rados-client" 
    caps osd = "allow rwx pool=sileht-pool" 

Associated revisions

Revision fa2ff333 (diff)
Added by Loic Dachary over 9 years ago

auth: add display auid to KeyRing::encode_formatted

http://tracker.ceph.com/issues/9790 Fixes: #9790

Signed-off-by: Loic Dachary <>

Revision fcc36922 (diff)
Added by Loic Dachary over 9 years ago

auth: add display auid to KeyServer::encode_secrets

http://tracker.ceph.com/issues/9790 Fixes: #9790

Signed-off-by: Loic Dachary <>

History

#1 Updated by Loïc Dachary over 9 years ago

And it never shows with ceph auth list whatever the format

#2 Updated by Loïc Dachary over 9 years ago

  • % Done changed from 0 to 60

#3 Updated by Loïc Dachary over 9 years ago

  • Status changed from 12 to Resolved
  • Assignee set to Loïc Dachary
  • % Done changed from 60 to 100

Since it's a minor inconvenience there probably is no need to backport.

#4 Updated by Loïc Dachary over 9 years ago

Since it's a minor inconvenience there probably is no need to backport.

Also available in: Atom PDF